--- a/模型优化技术/模型Pruning.ipynb
+++ b/模型优化技术/模型Pruning.ipynb
@@ -9,6 +9,9 @@
    },
    "outputs": [],
    "source": [
+    "import torch\n",
+    "\n",
+    "\n",
     "# 步骤1：评估通道重要性（以BN层γ为例）\n",
     "def compute_channel_importance(model):\n",
     "    gamma_values = []\n",
